# auto-ninja

./: .gitignore  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml  python-package.yml
auto_ninja/: django_services.py
demo/: settings.py  urls.py
demo/api/: main.py
polls/api/endpoints/: __init__.py  choice.py  question.py
polls/api/schemas/: __init__.py  choice.py  question.py
polls/migrations/: 0001_initial.py
requirements/: develop.txt  test.txt
